Update UIL to 1.8.2